Bug 1910477 - Fix parsing of EML files containing large headers. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D218463

--HG--
extra : amend_source : 9fa11dddf0781df4814cecd50f39fd799f456c56